--- a/css/InfoHoteles.css
+++ b/css/InfoHoteles.css
@@ -63,10 +63,10 @@ p{
 }
 
 .buscador-search{
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     margin-top: 23px;
-    padding: 5px 15px;
+    padding: 1px 15px;
     border-radius: 100px;
 }
 
@@ -81,8 +81,11 @@ p{
     padding-left: 25px;
     position: relative;
     top: 10px;
+    width: 25px;
 }
-
+.usuario-encabezado{
+    width: 25px;
+}
 .buscador-submit:focus{
     outline: none;
 }
@@ -106,6 +109,7 @@ p{
     border-radius: 100px;
 }
 
+/* Banner */
 #landtours-banner{
     width: 1200px;
 }
@@ -155,10 +159,15 @@ p{
     background-color: black;
     border-radius: 5px 5px 5px 5px;
     border: 0;
-    margin-left: 500px;
+    margin-left: 620px;
     font-size: 1rem;
 }
 
+.button:hover{
+    background-color: #DD7649;
+    color: black;
+    border: 0;
+}
 #button-sabermas{
     margin: 0 auto;
     margin-top: 30px;
@@ -168,16 +177,15 @@ p{
     background-color: black;
     border-radius: 5px 5px 5px 5px;
     border: 0;
-    margin-left: 500px;
+    margin-left: 620px;
     font-size: 1rem;
 }
 
-.button:hover{
+#button-sabermas:hover{
     background-color: #DD7649;
     color: black;
     border: 0;
 }
-
 #button-sabermashoteles{
     width: 160px;
     height: 50px;
@@ -230,8 +238,8 @@ p{
     display: block;
     margin: auto;
     background-color: #CCCCCC;
-    padding-top: 50px;
-    padding-bottom: 250px;
+    padding-top: 20px;
+    padding-bottom: 200px;
 }
 
 .informacion-footer{
