Agrego solución a errores

--- a/SASS/Partials/_maincontent.scss
+++ b/SASS/Partials/_maincontent.scss
@@ -177,6 +177,9 @@ p.nombres-destinos{
   padding: 15px 35px;
   text-decoration: none;
 }
+.error-boton:hover{
+  background-color: #F4A24C;
+}
 
 .boton-descripcion:hover{
   background-color: #F4A24C;
