--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,6 +239,9 @@ p.nombres-destinos {
   float: right;
   padding: 15px 35px;
   text-decoration: none; }
+.error-boton:hover{ 
+  background-color: #F4A24C;
+}
 
 .boton-descripcion:hover{
   background-color: #F4A24C;
