--- a/SASS/Partials/_header.scss
+++ b/SASS/Partials/_header.scss
@@ -79,6 +79,6 @@ p {
   height: 330px;
   max-width:  1200px;
   margin: auto;
-  background-image: url('img/bali-banner.jpg');
+  background-image: url("../../img/bali-banner.jpg");
   background-size: cover;
 }
